server/static/css/base.css
* {
	padding: 0;
	margin: 0;
	font-family: var(--font);
	box-sizing: border-box;
	/* transition: all 0.2s; */
	color: var(--text);
}
:root {
	font-size: 10pt;

	--red: #ff5c72;
	--red-light: #ffb0bb;
	--blue: #5574ff;
	--light-blue: #6bc9ff;
	--green: #1bd6ae;
	--yellow: #ffa155;

	/* --bg-grad: linear-gradient(45deg, var(--blue), var(--light-blue)); */
	--bg-grad: linear-gradient(to right, #f2709c, #ff9472);

	--text: #333;
	--light-text: #fff;
	--text-light: #666;
	--text-light-2: #898;

	--inp: #f4f4f4;
	--inp-2: #eee;

	--card: #fff;
	--card-table: #f9f9f9;
	--card-table-2: #f0f0f0;

	--card-main: rgba(255, 255, 255, 0.5);

	--easing: cubic-bezier(0.68, 0.28, 0.82, 0.64);
	--font: Poppins;
}

a {
	text-decoration: none;
	color: inherit;
}

body {
	height: 100vh;
	width: 100vw;
	overflow-x: hidden;
	background-attachment: fixed;
	background-image: var(--bg-grad);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.main {
	width: 88%;
	padding: 30px;
	border-radius: 20px;
	background-color: var(--card-main);
	box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.1);

	position: relative;
	display: flex;
	flex-direction: column;
}

.main-form {
	align-items: center;
	justify-content: center;
	width: 360px;
	min-height: 360px;
	background-color: var(--card);
}

.main-error {
	min-height: 0;
	width: 100%;
	margin-top: 20px;
	align-items: flex-start;
	padding: 11px;
	border-radius: 12px;
	border: 2px solid var(--red);
}

.main-error h3 {
	margin-bottom: 4px;
	font-size: 1.1rem;
	font-weight: 600;
}

.inp {
	width: 100%;
	display: block;
	padding: 0 15px;
	height: 40px;
	border-radius: 9px;
	border: none;
	margin-top: 10px;
	outline: none;
	background-color: var(--inp);
	font-size: 0.9rem;
}

.inp:hover,
.inp:focus {
	background-color: var(--inp-2);
}

.head-3 {
	margin: 5px 0 8px 0;
	font-size: 2rem;
	text-align: center;
}

.btn {
	font-size: 1rem;
	text-transform: uppercase;
	background-color: var(--blue);
	height: 40px;
	padding: 0 20px;
	border: none;
	border-radius: 8px;
	margin-top: 30px;
	outline: none;
	cursor: pointer;
	font-weight: 600;
	letter-spacing: 1px;
	color: var(--light-text);
}

.text {
	font-size: 1.25rem;
	margin: 10px 0;
}

.sub-main {
	width: 100%;
	padding: 20px;
	margin-top: 20px;
	border-radius: 10px;
	background-color: var(--card);
	box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.06);
}

.query-params {
	display: flex;
	flex-wrap: wrap;
}

.sub-main h3 {
	font-weight: 600;
	color: var(--text-light);
	width: 100%;
	font-size: 1.1rem;
}

.query-params .inp {
	margin: 6px;
	width: 200px;
}

.query-params .inp:nth-of-type(1) {
	margin-left: 0;
}

.query-params .btn {
	margin: 6px;
}

table {
	width: 100%;
	font-size: 1rem;
	font-weight: 400 !important;
	background-color: var(--card-table);
	border-collapse: collapse;
	border-radius: 10px;
	overflow: hidden;
	margin: 15px 0;
}

table thead {
	background-color: var(--blue);
}

table th {
	text-align: left;
	color: var(--light-text);
	font-weight: 500;
	font-size: 1rem;
}

table td,
table th {
	padding: 10px;
}

table tr:nth-of-type(2n) {
	background-color: var(--card-table-2);
}

.query-item h3 {
	font-size: 1.3rem;
}

.query-item .text {
	font-size: 1rem;
}

.query-item .btn {
	margin-top: 10px;
}

.header {
	width: 88%;
	top: 4%;
	left: 6;
	position: absolute;
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 80px;
	border-radius: 10px;
	background-color: rgba(0, 0, 0, 0.15);
	box-shadow: 0px 3px 8px 2px rgba(0, 0, 0, 0.09);
	overflow: hidden;
}

.header .btn {
	margin: 0;
}

.header-content {
	background-color: #fff;
	height: 100%;
	width: 100%;
	padding: 0 35px;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.header-logo {
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 1.2rem;
	text-transform: uppercase;
	letter-spacing: 1.5px;
	width: 300px;
	white-space: nowrap;
	flex: 0 0 auto;
	color: var(--light-text);
}

.header-logo img {
	height: 28px;
	opacity: 0.5;
	margin-right: 12px;
}

.header-logo b {
	margin-left: 9px;
	color: var(--light-text);
}

.badge {
	padding: 8px 14px;
	background-color: #e5e5e5;
	line-height: 40px;
	font-size: 1.1rem;
	color: var(--blue);
	margin: 0 15px 0 0;
	font-weight: 500;
	border-radius: 20px;
}

